# fnv-cloud-upgrade

./: CMakeLists.txt  vcpkg.json
include/: PCH.h
package/NVSE/Plugins/: CloudUpgrade.ini  CloudsUpgrade.ini
src/: CloudUpgrade.cpp  CloudUpgrade.h  CloudsUpgrade.cpp  CloudsUpgrade.h  NVSEPlugin.cpp  Patches.cpp
